Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ It also ensures that the database is dropped at the end of the job.</p>
 </ul>
 
 <h2>
+<a id="see-also" class="anchor" href="#see-also" aria-hidden="true"><span class="octicon octicon-link"></span></a>See also</h2>
+
+<p>There is also a PostgreSQL variant of this plugin : <a href="https://github.com/jbox-web/job-database-manager-postgresql">https://github.com/jbox-web/job-database-manager-postgresql</a></p>
+
+<h2>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h2>
 
 <p>You can contribute to this plugin in many ways such as :</p>
