--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ It also ensures that the database is dropped at the end of the job.</p>
 <h2>
 <a id="see-also" class="anchor" href="#see-also" aria-hidden="true"><span class="octicon octicon-link"></span></a>See also</h2>
 
-<p>There is also a PostgreSQL variant of this plugin : <a href="https://github.com/jbox-web/job-database-manager-postgresql">https://github.com/jbox-web/job-database-manager-postgresql</a></p>
+<p>There is also a PostgreSQL variant of this plugin : <a href="https://github.com/jbox-web/job-database-manager-postgresql">jbox-web/job-database-manager-postgresql</a></p>
 
 <h2>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h2>
