Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@ It also ensures that the database is dropped at the end of the job.</p>
 <p>There is also a PostgreSQL variant of this plugin : <a href="https://github.com/jbox-web/job-database-manager-postgresql">jbox-web/job-database-manager-postgresql</a></p>
 
 <h2>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h2>
+
+<p>A big thank to <a href="https://github.com/jbox-web/job-database-manager-mysql/blob/master/AUTHORS">them</a> for their contribution!</p>
+
+<h2>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h2>
 
 <p>You can contribute to this plugin in many ways such as :</p>
