--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <section class="main-content">
       <p><a href="https://github.com/jbox-web/job-database-manager-mysql/blob/master/LICENSE"><img src="https://img.shields.io/github/license/jbox-web/job-database-manager-mysql.svg" alt="GitHub license"></a>
 <a href="https://github.com/jbox-web/job-database-manager-mysql/releases/latest"><img src="https://img.shields.io/github/release/jbox-web/job-database-manager-mysql.svg" alt="GitHub release"></a>
+<a href="https://travis-ci.org/jbox-web/job-database-manager-mysql"><img src="https://travis-ci.org/jbox-web/job-database-manager-mysql.svg?branch=master" alt="Build Status"></a>
 <a href="https://codeclimate.com/github/jbox-web/job-database-manager-mysql"><img src="https://codeclimate.com/github/jbox-web/job-database-manager-mysql/badges/gpa.svg" alt="Code Climate"></a>
 <a href="https://github.com/jbox-web/job-database-manager-mysql/releases/download/1.0.0/job-database-manager-mysql.hpi"><img src="https://img.shields.io/github/downloads/jbox-web/job-database-manager-mysql/latest/job-database-manager-mysql.hpi.svg" alt="Download"></a></p>
 
